--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: untitled
+title: Space Invaders 2013 - Thomas Street
 ---
 
 
-<h1 class="text-center">Space Invaders</h1>
+<!--<h1 class="text-center">Space Invaders</h1>-->
