--- a/_posts/info/2013-05-23-sponsor-us.html
+++ b/_posts/info/2013-05-23-sponsor-us.html
@@ -1,10 +1,13 @@
 ---
+published: !<tag:yaml.org,2002:js/undefined> ""
 layout: info
-title: Like the idea? Why not Sponsor Space Invaders!
+title: "Like the idea? Why not Sponsor Space Invaders!"
 categories: 
-    - info
+  - info
 image: "http://www.dublincity.ie/Pages/Welcome/defaultpagecontent/images/ShortLogo.png"
+
 ---
+
 <div class="hero-unit">
   <h1>€100 Your Logo + Handshake + Personal Thank You</h1>
   <p>*** WHAT YOU GET: Hey big spender! Your logo large in lights in the sponsors section of the website and our promo material on the day. Most important of all a handshake and thank you from the podium on the day of the event! PLUS a personal thank you letter ***
@@ -35,7 +38,7 @@ Well you're just being a massive legend so we just don't know what to say but po
       <div class="caption">
         <h3>€50 Your Logo + Handshake</h3>
         <p>*** WHAT YOU GET: Your logo (small) in our sponsors section of the website and promo material. Most important of all a handshake on the day of the event! ***</p>
-        <p>That's right you're a legend for help us!</p>
+        <p>That's right you're a legend for helping us!</p>
         <p class="text-center"><a href="#" class="btn btn-warning btn-large">Sponsor €50</a></p>
       </div>
     </div>
