--- a/_posts/info/2013-05-23-sponsor-us.html
+++ b/_posts/info/2013-05-23-sponsor-us.html
@@ -23,7 +23,7 @@ Well you're just being a massive legend so we just don't know what to say but po
 <ul class="thumbnails">
   <li class="span4">
     <div class="thumbnail">
-      <img src="http://placehold.it/400x200&text=[img]" alt="">
+      <img src="http://api.tiles.mapbox.com/v3/examples.map-vyofok3q/pin-m-star+ff6633(-76.998,38.899)/-77,38.9,15/400x200.png">
       <div class="caption">
         <h3>€100 Your Logo + Handshake + Personal Thank You</h3>
         <p>*** WHAT YOU GET: Hey big spender! Your logo large in lights in the sponsors section of the website and our promo material on the day. Most important of all a handshake and thank you from the podium on the day of the event! PLUS a personal thank you letter ***</p>
