--- a/_posts/info/2013-05-23-sponsor-us.html
+++ b/_posts/info/2013-05-23-sponsor-us.html
@@ -23,7 +23,7 @@ Well you're just being a massive legend so we just don't know what to say but po
 <ul class="thumbnails">
   <li class="span4">
     <div class="thumbnail">
-      <img src="http://a.tiles.mapbox.com/v3/rusty.map-kyc12wra/-6.283378316116331,53.34322667310956,16/500x300.png">
+      <img src="http://a.tiles.mapbox.com/v3/rusty.map-kyc12wra/-6.283378316116331,53.34322667310956,16/500x300.pn4">
       <div class="caption">
         <h3>€100 Your Logo + Handshake + Personal Thank You</h3>
         <p>*** WHAT YOU GET: Hey big spender! Your logo large in lights in the sponsors section of the website and our promo material on the day. Most important of all a handshake and thank you from the podium on the day of the event! PLUS a personal thank you letter ***</p>
