--- a/_posts/info/2013-05-23-sponsor-us.html
+++ b/_posts/info/2013-05-23-sponsor-us.html
@@ -34,7 +34,8 @@ Well you're just being a massive legend so we just don't know what to say but po
   </li>
   <li class="span4">
     <div class="thumbnail">
-      <img src="http://placehold.it/400x200&text=[img]" alt="">
+      <img src="http://a.tiles.mapbox.com/v3/rusty.map-kyc12wra/-6.283378316116331,53.34322667310956,16/400x200.png" />
+      
       <div class="caption">
         <h3>€50 Your Logo + Handshake</h3>
         <p>*** WHAT YOU GET: Your logo (small) in our sponsors section of the website and promo material. Most important of all a handshake on the day of the event! ***</p>
@@ -45,7 +46,8 @@ Well you're just being a massive legend so we just don't know what to say but po
   </li>
   <li class="span4">
     <div class="thumbnail">
-      <img src="http://placehold.it/400x200&text=[img]" alt="">
+      <img src="http://a.tiles.mapbox.com/v3/rusty.map-kyc12wra/-6.283378316116331,53.34322667310956,16/400x200.png" />
+      
       <div class="caption">
         <h3>€25 Your Name + Handshake</h3>
         <p>*** WHAT YOU GET: Your name in regular text in our sponsors section of the website and promo material ***</p>
