--- a/_posts/info/2013-05-23-sponsor-us.html
+++ b/_posts/info/2013-05-23-sponsor-us.html
@@ -14,7 +14,7 @@ image: "http://www.dublincity.ie/Pages/Welcome/defaultpagecontent/images/ShortLo
 
 Well you're just being a massive legend so we just don't know what to say but pour our hearts our to you in a lovely letter post event.</p>
   <p>
-    <a class="btn btn-primary btn-large">
+    <a class="btn btn-primary btn-large" href="https://dublinspaceinvaders.dpdcart.com/cart/buy?product_id=61846&amp;product_price_id=63433&amp;quantity=1&amp;gateway=paypal">
       Sponsor Now!
     </a>
   </p>
@@ -28,7 +28,7 @@ Well you're just being a massive legend so we just don't know what to say but po
         <h3>€100 Your Logo + Handshake + Personal Thank You</h3>
         <p>*** WHAT YOU GET: Hey big spender! Your logo large in lights in the sponsors section of the website and our promo material on the day. Most important of all a handshake and thank you from the podium on the day of the event! PLUS a personal thank you letter ***</p>
         <p>Well you're just being a massive legend so we just don't know what to say but pour our hearts our to you in a lovely letter post event..</p>    
-        <p class="text-center"><a href="#" class="btn btn-large btn-inverse">Sponsor €100</a></p>
+        <p class="text-center"><a href="https://dublinspaceinvaders.dpdcart.com/cart/buy?product_id=61846&amp;product_price_id=63433&amp;quantity=1&amp;gateway=paypal" class="btn btn-large btn-inverse">Sponsor €100</a></p>
       </div>
     </div>
   </li>
@@ -40,7 +40,7 @@ Well you're just being a massive legend so we just don't know what to say but po
         <h3>€50 Your Logo + Handshake</h3>
         <p>*** WHAT YOU GET: Your logo (small) in our sponsors section of the website and promo material. Most important of all a handshake on the day of the event! ***</p>
         <p>That's right you're a legend for helping us!</p>
-        <p class="text-center"><a href="#" class="btn btn-warning btn-large">Sponsor €50</a></p>
+        <p class="text-center"><a href="https://dublinspaceinvaders.dpdcart.com/cart/buy?product_id=61844&amp;product_price_id=63431&amp;quantity=1&amp;gateway=paypal" class="btn btn-warning btn-large">Sponsor €50</a></p>
       </div>
     </div>
   </li>
@@ -52,7 +52,7 @@ Well you're just being a massive legend so we just don't know what to say but po
         <h3>€25 Your Name + Handshake</h3>
         <p>*** WHAT YOU GET: Your name in regular text in our sponsors section of the website and promo material ***</p>
         <p>That's right you can have personal contact with us!</p>
-        <p class="text-center"><a href="#" class="btn btn-danger btn-large">Sponsor €25</a></p>
+        <p class="text-center"><a href="https://dublinspaceinvaders.dpdcart.com/cart/buy?product_id=61843&amp;product_price_id=63430&amp;quantity=1&amp;gateway=paypal" class="btn btn-danger btn-large">Sponsor €25</a></p>
       </div>
     </div>
   </li>
