removed repeating text

--- a/_posts/features/2013-05-19-site.html
+++ b/_posts/features/2013-05-19-site.html
@@ -10,7 +10,7 @@ order: 3
 <div class="container">
 	<div id="site" class="featurette">
         <img class="featurette-image pull-right img-rounded" src="http://a.tiles.mapbox.com/v3/rusty.map-kyc12wra/-6.283378316116331,53.34322667310956,16/500x500.png"/>
-        <h2  class="featurette-heading">Thomas Street. <span class="muted">Is your playground!</span></h2>
-        <p class="lead">Are you a student or graduate built environment professional who wants to change the urban environment for the better? Here's your chance with the new <strong>Space Invaders</strong> competition.</p>
+        <h2  class="featurette-heading">Thomas Street. <span class="muted">Plan beyond the site line. Rethink site. Transform area.</span></h2>
+        <p class="lead">We challenge you to come up with a conceptual plan for this site on the iconic Thomas Street. <strong>Plan beyond the site line. Rethink site. Transform area.<strong></p>
       </div>
 </div>
