added print press logo, updated to inlcude interactive map

--- a/_posts/features/2013-05-19-site.html
+++ b/_posts/features/2013-05-19-site.html
@@ -9,8 +9,9 @@ order: 3
 ---
 <div class="container">
 	<div id="site" class="featurette">
-        <img class="featurette-image pull-right img-rounded" src="http://a.tiles.mapbox.com/v3/rusty.map-kyc12wra/-6.283378316116331,53.34322667310956,16/500x500.png"/>
-        <h2  class="featurette-heading">Thomas Street. <span class="muted">Plan beyond the site line. Rethink site. Transform area.</span></h2>
-        <p class="lead">We challenge you to come up with a conceptual plan for this site on the iconic Thomas Street. <strong>Plan beyond the site line. Rethink site. Transform area.<strong></p>
+        <!--<img class="featurette-image pull-right img-rounded" src="http://a.tiles.mapbox.com/v3/rusty.map-kyc12wra/-6.283378316116331,53.34322667310956,16/500x500.png"/>-->
+		<iframe class="featurette-image pull-right img-rounded" width='500' height='500' frameBorder='0' src='http://a.tiles.mapbox.com/v3/rusty.map-gkla82az.html#17/53.34276000000002/-6.282990000000015'></iframe>
+        <h2  class="featurette-heading">Thomas Street. <span class="muted">Plan beyond the site line.</span></h2>
+        <p class="lead">We challenge you to come up with a conceptual plan for this site on the iconic Thomas Street. <strong>Rethink the site. Transform the area.<strong></p>
       </div>
 </div>
