--- a/_posts/features/2013-05-16-sponsors.html
+++ b/_posts/features/2013-05-16-sponsors.html
@@ -14,6 +14,7 @@ order: 6
 		  <h2  class="featurette-heading" style="color:#FFF;">Thank you. <span class="muted">To these lovely folks!</span></h2>
 		  <img class="featurette-image-spons img-rounded" src="http://www.dublincity.ie/Pages/Welcome/defaultpagecontent/images/ShortLogo.png">
 		  <img class="featurette-image-spons img-rounded" src="{{site.baseurl}}/img/theprintpress_web.png">
+			<img class="featurette-image-spons img-rounded" src="{{site.baseurl}}/img/arc_logo.png">
 			
 			<p class="lead" style="color:#999;">Space Invaders 2013 would be nothing without the generous support of the folks shown here. Thank you all for supporting the prizes, providing the venue and donating your time to making Space Invaders a reality.</p>
 			<h2  class="featurette-heading" style="color:#FFF;"><span class="muted">Organised By</span></h2>
