--- a/_posts/features/2013-05-18-judge.html
+++ b/_posts/features/2013-05-18-judge.html
@@ -27,9 +27,9 @@ order: 4
 	<div class="container">
 		<div id="criteria" class="featurette">
 	        <img class="featurette-image pull-right img-rounded" src="{{site.baseurl}}/img/space-invaders.png">
-	        <h2  class="featurette-heading" style="color:#FFF;">The Criteria. <span class="muted"><a href="http://www.environ.ie/en/Publications/DevelopmentandHousing/Planning/FileDownLoad,19217,en.pdf">Urban Design Manual &rarr;</a></span></h2>
-	        <p class="lead" style="color:#999;">We have decided not to include all of the criteria contained in the Manual, but you are welcome to do so if you consider it appropriate.
-			<a href="http://www.environ.ie/en/Publications/DevelopmentandHousing/Planning/FileDownLoad,19217,en.pdf">Urban Design Manual &rarr;</a>
+	        <h2  class="featurette-heading" style="color:#FFF;">Judging Criteria. <span class="muted">Aim High!</span></h2>
+	        <p class="lead" style="color:#999;">The judging criteria are based on principals from the urban design manual. Below is the list of criteria for judging extracted from the manual which will be used by the judging panel.
+			<!--<a href="http://www.environ.ie/en/Publications/DevelopmentandHousing/Planning/FileDownLoad,19217,en.pdf">Urban Design Manual &rarr;</a>-->
               <ol class="lead" style="color:#FFF;margin-left:60px;">
 					<li>Context</li>
 					<li>Connections</li>
