--- a/_posts/features/2013-05-21-redesign.html
+++ b/_posts/features/2013-05-21-redesign.html
@@ -9,7 +9,7 @@ order: 1
 
 <div class="container" style="margin-top:60px;">
 	<div id="what" class="featurette">
-        <img class="featurette-image pull-right img-rounded" src="{{site.baseurl}}/img/spaceinvaderslogo_black.png">
+        <img class="featurette-image pull-right img-rounded" src="{{site.baseurl}}/img/spaceinvaders2013.jpg">
         <h2  class="featurette-heading">Redesign the city. <span class="muted">Do it your way!</span></h2>
         <p class="lead">Are you a student or graduate planner who wants to change the urban environment for the better? Here's your chance with the new <strong>Space Invaders</strong> competition.</p>
       </div>
