updated with sybil changes

--- a/_posts/features/2013-05-18-judge.html
+++ b/_posts/features/2013-05-18-judge.html
@@ -28,7 +28,7 @@ order: 4
 		<div id="criteria" class="featurette">
 	        <img class="featurette-image pull-right img-rounded" src="{{site.baseurl}}/img/space-invaders.png">
 	        <h2  class="featurette-heading" style="color:#FFF;">Judging Criteria. <span class="muted">Aim High!</span></h2>
-	        <p class="lead" style="color:#999;">The judging criteria are based on principals from the urban design manual. Below is the list of criteria for judging extracted from the manual which will be used by the judging panel.
+	        <p class="lead" style="color:#999;">The judging criteria are based on principals from the Urban Design Manual. Below is the list of criteria for judging extracted from the manual which will be used by the judging panel.
 			<!--<a href="http://www.environ.ie/en/Publications/DevelopmentandHousing/Planning/FileDownLoad,19217,en.pdf">Urban Design Manual &rarr;</a>-->
               <ol class="lead" style="color:#FFF;margin-left:60px;">
 					<li>Context</li>
