--- a/_posts/features/2013-05-21-redesign.html
+++ b/_posts/features/2013-05-21-redesign.html
@@ -1,8 +1,9 @@
 ---
+published: true
 layout: new
 title: Redesign
 categories: 
-    - feature
+  - feature
 image: "{{site.baseurl}}/img/spaceinvaderslogo_black.png"
 order: 1
 ---
@@ -10,7 +11,7 @@ order: 1
 <div class="container" style="margin-top:60px;">
 	<div id="what" class="featurette">
         <img class="featurette-image pull-right img-rounded" src="{{site.baseurl}}/img/spaceinvaders2013.jpg">
-        <h2  class="featurette-heading">Plan beyond the site-line. <span class="muted">Re-think Site, Transform Area!</span></h2>
+        <h2  class="featurette-heading">Plan beyond the site-line. <span class="muted">Re-think Site, Transform Area.</span></h2>
         <p class="lead">Are you a student or graduate planner who wants to change the urban environment for the better? Here's your chance to showcase your talents with the new <strong>Space Invaders</strong> competition.</p>
       </div>
 </div>
