--- a/_posts/features/2013-05-20-fight.html
+++ b/_posts/features/2013-05-20-fight.html
@@ -1,19 +1,20 @@
 ---
+published: true
 layout: new
 title: Fight
 categories: 
-    - feature
+  - feature
 image: "{{{site.baseurl}}/img/space-invaders-game.jpg"
 order: 2
- 
 ---
+
 <div class="black" style="">
 	<hr class="featurette-divider">
 	<div  class="container">
 		<div id="fight"  class="featurette">
 	        <img class="featurette-image pull-left img-rounded" src="{{site.baseurl}}/img/space-invaders-game.jpg">
 	        <h2 class="featurette-heading" style="color:#FFF;">Fight for glory. <span class="muted">Your Colleges' pride is at stake!</span></h2>
-	        <p class="lead" style="color:#999;">The competition will be judged by a select panel of judges with the winning team receiving some sort of amazing prize for you and your college. The winning team will receive a space invaders plaque for their university and a <b>&euro;1000</b> euro cash prize for the team.<!--You will get your model / design built out by a professional 3D modeling agency to show off your handy work forever more.--></p>
+          <p class="lead" style="color:#999;">You are invited to compete against other planning schools in teams of 2 - 4 planning students / graduates to redevelope the site. Your work  will be judged by a select panel of judges. If you win, high five! You wil recieve an amazing prize for your team and your university. The prizes include a cash prize to the order of a &euro;1000 and a trophy for your college.<!--You will get your model / design built out by a professional 3D modeling agency to show off your handy work forever more.--></p>
 	      </div>	
 	</div>
 	<hr class="featurette-divider">				
