--- a/_posts/features/2013-05-18-judge.html
+++ b/_posts/features/2013-05-18-judge.html
@@ -1,11 +1,11 @@
 ---
+published: true
 layout: new
 title: Judge
 categories: 
-    - feature
+  - feature
 image: "{{site.baseurl}}/img/space-invaders.png"
 order: 4
- 
 ---
 
 <div class="black">
@@ -13,7 +13,7 @@ order: 4
 	<div class="container">
 		<div id="criteria" class="featurette">
 	        <img class="featurette-image pull-left img-rounded" src="{{site.baseurl}}/img/space-invaders.png">
-	        <h2  class="featurette-heading" style="color:#FFF;">Be Judged. <span class="muted">Got to win!</span></h2>
+	        <h2  class="featurette-heading" style="color:#FFF;">Defend your Idea. <span class="muted">Be Judged!</span></h2>
 	        <p class="lead" style="color:#999;">Because what's a competition without being able to to win something? 
 				Your ideas are what is most important, and it is up to you to decide what presentation format works best for you.
 				The projects will be evaluated against the following best practice criteria contained in the Urban Design Manual:
