--- a/_posts/features/2013-05-18-judge.html
+++ b/_posts/features/2013-05-18-judge.html
@@ -14,7 +14,7 @@ order: 4
 		<div id="criteria" class="featurette">
 	        <img class="featurette-image pull-left img-rounded" src="{{site.baseurl}}/img/space-invaders.png">
 	        <h2  class="featurette-heading" style="color:#FFF;">Defend your Idea. <span class="muted">Be Judged!</span></h2>
-	        <p class="lead" style="color:#999;">Regardless of whether you are from north or south, you've got the ideas, you have the talent! Get involved, put <!--your ideas to the test. This is your chance to show the world what you can do! Because what's a competition without being able to to win something? 
+	        <p class="lead" style="color:#999;">Regardless of whether you are from north or south, you've got the ideas, you have the talent! Get involved, put your ideas to the test. This is your chance to show the world what you can do! <!--Because what's a competition without being able to to win something? 
 				Your ideas are what is most important, and it is up to you to decide what presentation format works best for you.
 				The projects will be evaluated against the following best practice criteria contained in the Urban Design Manual:-->
 			</p>
@@ -27,7 +27,7 @@ order: 4
 	<div class="container">
 		<div id="criteria" class="featurette">
 	        <img class="featurette-image pull-right img-rounded" src="{{site.baseurl}}/img/space-invaders.png">
-	        <h2  class="featurette-heading" style="color:#FFF;">Judging Criteria. <span class="muted">Aim High!</span></h2>
+	        <h2  class="featurette-heading" style="color:#FFF;">Here's something to aim for. <span class="muted">Aim High!</span></h2>
 	        <p class="lead" style="color:#999;">The judging criteria are based on principals from the Urban Design Manual. Below is the list of criteria for judging extracted from the manual which will be used by the judging panel.
 			<!--<a href="http://www.environ.ie/en/Publications/DevelopmentandHousing/Planning/FileDownLoad,19217,en.pdf">Urban Design Manual &rarr;</a>-->
               <ol class="lead" style="color:#FFF;margin-left:60px;">
