--- a/_posts/info/2013-05-23-sponsor-us.html
+++ b/_posts/info/2013-05-23-sponsor-us.html
@@ -1,18 +1,15 @@
 ---
-published: !<tag:yaml.org,2002:js/undefined> ""
+published: true
 layout: info
-title: "Like the idea? Why not Sponsor Space Invaders!"
 categories: 
   - info
-image: "http://www.dublincity.ie/Pages/Welcome/defaultpagecontent/images/ShortLogo.png"
-
 ---
 
 <div class="hero-unit">
-  <h1>€100 Your Logo + Handshake + Personal Thank You</h1>
+  <h1>€100 
   <p>*** WHAT YOU GET: Hey big spender! Your logo large in lights in the sponsors section of the website and our promo material on the day. Most important of all a handshake and thank you from the podium on the day of the event! PLUS a personal thank you letter ***
 
-Well you're just being a massive legend so we just don't know what to say but pour our hearts our to you in a lovely letter post event.</p>
+Well you're just being a massive legend so we just don't know what to say but pour our hearts out to you in a lovely letter post event.</p>
   <p>
     <a class="btn btn-primary btn-large" href="https://dublinspaceinvaders.dpdcart.com/cart/buy?product_id=61846&amp;product_price_id=63433&amp;quantity=1&amp;gateway=paypal">
       Sponsor Now!
@@ -24,10 +21,10 @@ Well you're just being a massive legend so we just don't know what to say but po
   <li class="span6">
     <div class="thumbnail">
       <img src="http://a.tiles.mapbox.com/v3/rusty.map-kyc12wra/-6.283378316116331,53.34322667310956,16/600x200.png" />
-      <div class="caption">
-        <h3>€100 Your Logo + Handshake + Personal Thank You</h3>
+      <div class=
+        <h3>€100 
         <p>*** WHAT YOU GET: Hey big spender! Your logo large in lights in the sponsors section of the website and our promo material on the day. Most important of all a handshake and thank you from the podium on the day of the event! PLUS a personal thank you letter ***</p>
-        <p>Well you're just being a massive legend so we just don't know what to say but pour our hearts our to you in a lovely letter post event..</p>    
+        <p>Well you're just being a massive legend so we just don't know what to say but pour our hearts out to you in a lovely letter post event..</p>    
         <p class="text-center"><a href="https://dublinspaceinvaders.dpdcart.com/cart/buy?product_id=61846&amp;product_price_id=63433&amp;quantity=1&amp;gateway=paypal" class="btn btn-large btn-inverse">Sponsor €100</a></p>
       </div>
     </div>
@@ -37,7 +34,7 @@ Well you're just being a massive legend so we just don't know what to say but po
       <img src="http://a.tiles.mapbox.com/v3/rusty.map-kyc12wra/-6.283378316116331,53.34322667310956,16/600x200.png" />
       
       <div class="caption">
-        <h3>€50 Your Logo + Handshake</h3>
+        <h3>€50 
         <p>*** WHAT YOU GET: Your logo (small) in our sponsors section of the website and promo material. Most important of all a handshake on the day of the event! ***</p>
         <p>That's right you're a legend for helping us!</p>
         <p class="text-center"><a href="https://dublinspaceinvaders.dpdcart.com/cart/buy?product_id=61844&amp;product_price_id=63431&amp;quantity=1&amp;gateway=paypal" class="btn btn-warning btn-large">Sponsor €50</a></p>
@@ -49,7 +46,7 @@ Well you're just being a massive legend so we just don't know what to say but po
       <img src="http://a.tiles.mapbox.com/v3/rusty.map-kyc12wra/-6.283378316116331,53.34322667310956,16/600x200.png" />
       
       <div class="caption">
-        <h3>€25 Your Name + Handshake</h3>
+        <h3>€25 
         <p>*** WHAT YOU GET: Your name in regular text in our sponsors section of the website and promo material ***</p>
         <p>That's right you can have personal contact with us!</p>
         <p class="text-center"><a href="https://dublinspaceinvaders.dpdcart.com/cart/buy?product_id=61843&amp;product_price_id=63430&amp;quantity=1&amp;gateway=paypal" class="btn btn-danger btn-large">Sponsor €25</a></p>
