--- a/_posts/features/2013-05-19-site.html
+++ b/_posts/features/2013-05-19-site.html
@@ -1,10 +1,10 @@
 ---
 published: true
-layout: new
-title: Site
+layout: 
+  - info
+  - new
 categories: 
   - feature
-image: "http://a.tiles.mapbox.com/v3/rusty.map-kyc12wra/-6.283378316116331,53.34322667310956,16/500x500.png"
 order: 3
 ---
 
@@ -12,7 +12,7 @@ order: 3
 	<div id="site" class="featurette">
         <!--<img class="featurette-image pull-right img-rounded" src="http://a.tiles.mapbox.com/v3/rusty.map-kyc12wra/-6.283378316116331,53.34322667310956,16/500x500.png"/>-->
 		<iframe class="featurette-image pull-right img-rounded" width='500' height='500' frameBorder='0' src='http://a.tiles.mapbox.com/v3/rusty.map-gkla82az.html#17/53.34276000000002/-6.282990000000015'></iframe>
-        <h2  class="featurette-heading">Thomas Street, D8 <span class="muted">is your playground.</span></h2>
-        <p class="lead">We challenge you to come up with a conceptual plan for this site adjacent to the iconic St James' Gate at Thomas Street. You have got aim high!<strong>Plan beyond site-line. Rethink the site. Transform the area.<strong></p>
+        <h2  class="featurette-heading">Thomas Street, Dublin 8 <span class="muted">is your playground.</span></h2>
+        <p class="lead">We challenge you to come up with a conceptual plan for this site adjacent to the iconic St James' Gate in Thomas Street. Remember - <strong>Plan beyond site-line. Rethink the site. Transform the area.<strong></p>
       </div>
 </div>
