--- a/_posts/features/2013-05-17-register.html
+++ b/_posts/features/2013-05-17-register.html
@@ -1,18 +1,19 @@
 ---
-layout: new
-title: Register
+published: true
+layout: 
+  - info
+  - "info,new"
 categories: 
-    - feature
-image: "{{site.baseurl}}/img/space-invaders.png"
+  - feature
 order: 5
- 
 ---
+
 <div class="container">
 	<div id="register" class="featurette">
       
       <div class="span5" style="border:10px solid #CCC; padding:20px;margin-right:40px;"><iframe height="948" allowTransparency="true" frameborder="0" scrolling="no" style="width:100%;border:none"  src="http://cbroderick.wufoo.com/embed/m7x3s5/"><a href="http://cbroderick.wufoo.com/forms/m7x3s5/">Fill out my Wufoo form!</a></iframe></div>
         
         <h2  class="featurette-heading">Register Now. <span class="muted">C'mon you know you want to!</span></h2>
-        <p class="lead" style="color:#999;">You will need to form a team of 2 - 4 people in order to qualify for any prizes. Any less than that sure you're only being greedy with the awesome prize.</p>
+        <p class="lead" style="color:#999;">To be in with a chance to win the prize, you will need to form a team of 2 to 4 people and be a current planning student or a graduate from 2011 onwards.</p>
       </div>	
 </div>
