--- a/_posts/features/2013-05-16-sponsors.html
+++ b/_posts/features/2013-05-16-sponsors.html
@@ -10,7 +10,7 @@ order: 6
 	<hr class="featurette-divider">
 	<div class="container">
 		<div id="sponsors" class="featurette">
-		  <h2  class="featurette-heading" style="color:#FFF;">Thank you, <span class="muted">To our lovely sponsors!</span></h2>
+		  <h2  class="featurette-heading" style="color:#FFF;">Thank you, <span class="muted">to our lovely sponsors!</span></h2>
 		  	<img class="featurette-image-spons img-rounded" src="http://www.dublincity.ie/Pages/Welcome/defaultpagecontent/images/ShortLogo.png" style="height:250px;">
 			<img class="featurette-image-spons img-rounded" src="{{site.baseurl}}/img/arc_logo.png" style="height:140px;">
 			<img class="featurette-image-spons img-rounded" src="{{site.baseurl}}/img/rtpi_logo.jpg" style="height:100px;">
