--- a/_posts/features/2013-05-18-judge.html
+++ b/_posts/features/2013-05-18-judge.html
@@ -12,7 +12,7 @@ order: 4
 		<div id="criteria" class="featurette">
 	        <img class="featurette-image pull-left img-rounded" src="{{site.baseurl}}/img/space-invaders.png">
 	        <h2  class="featurette-heading" style="color:#FFF;">Defend your Idea. <span class="muted">Be Judged!</span></h2>
-	        <p class="lead" style="color:#999;">Regardless of whether you are from north or south, you've got the skills, you have the talent! Get involved, put your ideas to the test. This is your time to shine! <!--Because what's a competition without being able to to win something? 
+	        <p class="lead" style="color:#999;">Regardless of whether you are from north, east, west or south, you've got the skills, you have the talent! Get involved, put your ideas to the test. This is your time to shine! <!--Because what's a competition without being able to to win something? 
 				Your ideas are what is most important, and it is up to you to decide what presentation format works best for you.
 				The projects will be evaluated against the following best practice criteria contained in the Urban Design Manual:-->
 			</p>
