--- a/_posts/features/2013-05-20-fight.html
+++ b/_posts/features/2013-05-20-fight.html
@@ -11,8 +11,8 @@ order: 2
 	<div  class="container">
 		<div id="fight"  class="featurette">
 	        <img class="featurette-image pull-left img-rounded" src="{{site.baseurl}}/img/space-invaders-game.jpg">
-	        <h2 class="featurette-heading" style="color:#FFF;">Fight for glory. <span class="muted">Your Colleges' pride is at stake!</span></h2>
-          <p class="lead" style="color:#999;">You are invited to compete against other planning schools in teams of 2 - 4 planning students / graduates to redevelope the site. Your project will be judged by a select jury. If you win congratulations, you are taking Space Invaders home with you for next year's competition. You will receive an amazing prize for your team and university. The prizes include a cash prize and a trophy for your college.<!--You will get your model / design built out by a professional 3D modeling agency to show off your handy work forever more.--></p>
+	        <h2 class="featurette-heading" style="color:#FFF;">The Competition.</h2>
+          <p class="lead" style="color:#999;">You are invited to compete against other planning schools in teams of 2 - 4 planning students/graduates to redevelop the Thomas Street site. Teams will be given the opportunity to present their plans for the site to a diverse and select jury. The winners will receive a cash prize along with a trophy for their University. Their projects will be on display in Dublin City Council to inspire the owners of the site, Digital Hub.</p>
 	      </div>	
 	</div>
 	<hr class="featurette-divider">				
