--- a/_posts/features/2013-05-18-judge.html
+++ b/_posts/features/2013-05-18-judge.html
@@ -6,26 +6,11 @@ categories:
 order: 4
 ---
 
-<div class="black">
-	<hr class="featurette-divider">
-	<div class="container">
-		<div id="criteria" class="featurette">
-	        <img class="featurette-image pull-left img-rounded" src="{{site.baseurl}}/img/space-invaders.png">
-	        <h2  class="featurette-heading" style="color:#FFF;">Defend your Idea. <span class="muted">Be Judged!</span></h2>
-	        <p class="lead" style="color:#999;">Regardless of whether you are from north, east, west or south, you've got the skills, you have the talent! Get involved, put your ideas to the test. This is your time to shine! <!--Because what's a competition without being able to to win something? 
-				Your ideas are what is most important, and it is up to you to decide what presentation format works best for you.
-				The projects will be evaluated against the following best practice criteria contained in the Urban Design Manual:-->
-			</p>
-	      </div>	
-	</div>				
-</div>
-
-<div class="black">
-	
-	<div class="container">
+<div class="container">
 		<div id="criteria" class="featurette">
 	        <img class="featurette-image pull-right img-rounded" src="{{site.baseurl}}/img/space-invaders.png">
-	        <h2  class="featurette-heading" style="color:#FFF;">Here's something to aim for. <span class="muted">Ready, Steady, GO!</span></h2>
+	        <h2  class="featurette-heading" style="color:#FFF;">Keep in mind... <!--<span class="muted">Ready, Steady, GO!</span>-->
+          </h2>
           <p class="lead" style="color:#999;"> Your project will be assessed against a selection of principles from the Urban Design Manual as outlined below:
 			<!--<a href="http://www.environ.ie/en/Publications/DevelopmentandHousing/Planning/FileDownLoad,19217,en.pdf">Urban Design Manual &rarr;</a>-->
               <ol class="lead" style="color:#FFF;margin-left:60px;">
