--- a/_posts/info/2013-05-23-sponsor-us.html
+++ b/_posts/info/2013-05-23-sponsor-us.html
@@ -6,51 +6,11 @@ categories:
 ---
 
 <div class="hero-unit">
-  <h1>€100 
-  <p>*** WHAT YOU GET: Hey big spender! Your logo large in lights in the sponsors section of the website and our promo material on the day. Most important of all a handshake and thank you from the podium on the day of the event! PLUS a personal thank you letter ***
-
-Well you're just being a massive legend so we just don't know what to say but pour our hearts out to you in a lovely letter post event.</p>
-  <p>
-    <a class="btn btn-primary btn-large" href="https://dublinspaceinvaders.dpdcart.com/cart/buy?product_id=61846&amp;product_price_id=63433&amp;quantity=1&amp;gateway=paypal">
-      Sponsor Now!
-    </a>
-  </p>
+  <h1>A word to the wiser.</h1> 
+  <p>To all current planners and supporters of the future generation of planners we offer the opportunity to support this young planner run competition and event. Space Invaders has been created and organised wholly by young planners who have devoted months of their time to ensure that there is a platform to showcase the talents of all Young Planners.</p>
+  <p>We, the Space Invaders, welcome any financial support that ensures young planners can display their knowledge and creativity in an environment of support by the industry. We have prepared a once in a lifetime opportunity for young planners to network with potential employers and have an invaluable addition to their CV's.</p>
+<p>You have the opportunity to support this event by simply donating 25, 50 or 100 euro to this, the first all Ireland Planning competition and the only planning event for young planners in 2013. In return, we will add your name to the sponsorship page on the website and to any promotional material we produce. All payments are via PayPal.</p>
+<p class="text-center"><a href="https://dublinspaceinvaders.dpdcart.com/cart/buy?product_id=61846&amp;product_price_id=63433&amp;quantity=1&amp;gateway=paypal" class="btn btn-large btn-inverse">Sponsor €100 via PayPal</a></p>
+  <p class="text-center"><a href="https://dublinspaceinvaders.dpdcart.com/cart/buy?product_id=61844&amp;product_price_id=63431&amp;quantity=1&amp;gateway=paypal" class="btn btn-warning btn-large">Sponsor €50 via PayPal</a></p>
+<p class="text-center"><a href="https://dublinspaceinvaders.dpdcart.com/cart/buy? product_id=61843&amp;product_price_id=63430&amp;quantity=1&amp;gateway=paypal" class="btn btn-danger btn-large">Sponsor €25 via PayPal</a></p>
 </div>
-
-<ul class="thumbnails">
-  <li class="span6">
-    <div class="thumbnail">
-      <img src="http://a.tiles.mapbox.com/v3/rusty.map-kyc12wra/-6.283378316116331,53.34322667310956,16/600x200.png" />
-      <div class=
-        <h3>€100 
-        <p>*** WHAT YOU GET: Hey big spender! Your logo large in lights in the sponsors section of the website and our promo material on the day. Most important of all a handshake and thank you from the podium on the day of the event! PLUS a personal thank you letter ***</p>
-        <p>Well you're just being a massive legend so we just don't know what to say but pour our hearts out to you in a lovely letter post event..</p>    
-        <p class="text-center"><a href="https://dublinspaceinvaders.dpdcart.com/cart/buy?product_id=61846&amp;product_price_id=63433&amp;quantity=1&amp;gateway=paypal" class="btn btn-large btn-inverse">Sponsor €100</a></p>
-      </div>
-    </div>
-  </li>
-  <li class="span6">
-    <div class="thumbnail">
-      <img src="http://a.tiles.mapbox.com/v3/rusty.map-kyc12wra/-6.283378316116331,53.34322667310956,16/600x200.png" />
-      
-      <div class="caption">
-        <h3>€50 
-        <p>*** WHAT YOU GET: Your logo (small) in our sponsors section of the website and promo material. Most important of all a handshake on the day of the event! ***</p>
-        <p>That's right you're a legend for helping us!</p>
-        <p class="text-center"><a href="https://dublinspaceinvaders.dpdcart.com/cart/buy?product_id=61844&amp;product_price_id=63431&amp;quantity=1&amp;gateway=paypal" class="btn btn-warning btn-large">Sponsor €50</a></p>
-      </div>
-    </div>
-  </li>
-  <li class="span6">
-    <div class="thumbnail">
-      <img src="http://a.tiles.mapbox.com/v3/rusty.map-kyc12wra/-6.283378316116331,53.34322667310956,16/600x200.png" />
-      
-      <div class="caption">
-        <h3>€25 
-        <p>*** WHAT YOU GET: Your name in regular text in our sponsors section of the website and promo material ***</p>
-        <p>That's right you can have personal contact with us!</p>
-        <p class="text-center"><a href="https://dublinspaceinvaders.dpdcart.com/cart/buy?product_id=61843&amp;product_price_id=63430&amp;quantity=1&amp;gateway=paypal" class="btn btn-danger btn-large">Sponsor €25</a></p>
-      </div>
-    </div>
-  </li>
-</ul>
