Added in black div bg

--- a/_posts/features/2013-05-18-judge.html
+++ b/_posts/features/2013-05-18-judge.html
@@ -6,6 +6,7 @@ categories:
 order: 4
 ---
 
+<div style="background:#000;">
 <div class="container">
 		<div id="criteria" class="featurette">
 	        <img class="featurette-image pull-right img-rounded" src="{{site.baseurl}}/img/space-invaders.png">
@@ -13,7 +14,7 @@ order: 4
           </h2>
           <p class="lead" style="color:#999;"> Your project will be assessed against a selection of principles from the Urban Design Manual as outlined below:
 			<!--<a href="http://www.environ.ie/en/Publications/DevelopmentandHousing/Planning/FileDownLoad,19217,en.pdf">Urban Design Manual &rarr;</a>-->
-              <ol class="lead" style="color:#FFF;margin-left:60px;">
+              <ol class="lead" style="color:#999;margin-left:60px;">
 					<li>Context</li>
 					<li>Connections</li>
 					<li>Inclusivity</li>
