renamed iframe md file

--- a/_posts/features/2013-05-19-site.html
+++ b/_posts/features/2013-05-19-site.html
@@ -5,6 +5,10 @@ categories:
   - feature
 order: 3
 ---
+<!-- 
+THIS FILE SHOULD NOT BE RENAMED TO A MARKDOWN FILE AS IT DOES NOT PLAY NICE WITH IFRAMES
+IMAGES ON THIS PAGE SHOULD BE AT EXTERNAL URLS ETC
+-->
 
 <div class="container">
 	<div id="site" class="featurette">
