--- a/_posts/features/2013-05-19-site.html
+++ b/_posts/features/2013-05-19-site.html
@@ -13,7 +13,7 @@ IMAGES ON THIS PAGE SHOULD BE AT EXTERNAL URLS ETC
 <div class="container">
 	<div id="site" class="featurette">
         <!--<img class="featurette-image pull-right img-rounded" src="http://a.tiles.mapbox.com/v3/rusty.map-kyc12wra/-6.283378316116331,53.34322667310956,16/500x500.png"/>-->
-		<iframe class="featurette-image pull-right img-rounded" width='500' height='500' frameBorder='0' src='http://a.tiles.mapbox.com/v3/rusty.map-gkla82az.html#17/53.34276000000002/-6.282990000000015'></iframe>
+		<iframe id="map" class="featurette-image pull-right img-rounded" style=" "width='500' height='500' frameBorder='0' src='http://a.tiles.mapbox.com/v3/rusty.map-gkla82az.html#17/53.34276000000002/-6.282990000000015'></iframe>
         <h2  class="featurette-heading">Thomas Street, Dublin 8 <span class="muted">is your playground.</span></h2>
         <p class="lead">We challenge you to come up with a conceptual plan for this site adjacent to the iconic St James' Gate in Thomas Street. Remember - <strong>Plan beyond site-line. Rethink the site, transform the area.<strong></p>
       </div>
