--- a/_posts/info/2013-05-23-sponsor-us.html
+++ b/_posts/info/2013-05-23-sponsor-us.html
@@ -6,10 +6,10 @@ categories:
 ---
 
 <div class="hero-unit">
-  <h1>A word to the wiser.</h1> 
-  <p>To all current planners and supporters of the future generation of planners we offer the opportunity to support this young planner run competition and event. Space Invaders has been created and organised wholly by young planners who have devoted months of their time to ensure that there is a platform to showcase the talents of all Young Planners.</p>
-  <p>We, the Space Invaders, welcome any financial support that ensures young planners can display their knowledge and creativity in an environment of support by the industry. We have prepared a once in a lifetime opportunity for young planners to network with potential employers and have an invaluable addition to their CV's.</p>
-<p>You have the opportunity to support this event by simply donating 25, 50 or 100 euro to this, the first all Ireland Planning competition and the only planning event for young planners in 2013. In return, we will add your name to the sponsorship page on the website and to any promotional material we produce. All payments are via PayPal.</p>
+   
+  <p>We appeal to all supporters of the next generation of planners to back this exciting new competition and event. </p>
+  
+<p>You can support the event by simply donating €25, €50 or €100 using the links below. In return, we will add your name to the sponsorship page on the website and to any promotional material that we produce. All payments are via PayPal.</p>
 <p class="text-center"><a href="https://dublinspaceinvaders.dpdcart.com/cart/buy?product_id=61846&amp;product_price_id=63433&amp;quantity=1&amp;gateway=paypal" class="btn btn-large btn-inverse">Sponsor €100 via PayPal</a></p>
   <p class="text-center"><a href="https://dublinspaceinvaders.dpdcart.com/cart/buy?product_id=61844&amp;product_price_id=63431&amp;quantity=1&amp;gateway=paypal" class="btn btn-warning btn-large">Sponsor €50 via PayPal</a></p>
 <p class="text-center"><a href="https://dublinspaceinvaders.dpdcart.com/cart/buy? product_id=61843&amp;product_price_id=63430&amp;quantity=1&amp;gateway=paypal" class="btn btn-danger btn-large">Sponsor €25 via PayPal</a></p>
